--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uniqid": "^5.3.4",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
